# greybus-zephyr

./: CMakeLists.txt  Kconfig  west.yml
.github/workflows/: module.yml
docs/: antora.yml
docs/modules/ROOT/: nav.adoc
docs/modules/ROOT/pages/: additional-resources.adoc  building.adoc  gpio.adoc  i2c.adoc  index.adoc
drivers/video/: CMakeLists.txt  Kconfig  fake_camera.c
dts/bindings/greybus/: zephyr,greybus-bundle-camera.yaml  zephyr,greybus-bundle-lights.yaml
include/greybus/: apbridge.h  greybus.h  greybus_log.h  greybus_messages.h  greybus_protocols.h  service.h  svc.h
samples/basic/: README.rst  sample.yaml  transport-i2c.conf  transport-tcpip.conf
samples/basic/boards/: beagleconnect_freedom.overlay
subsys/greybus/: CMakeLists.txt  Kconfig  apbridge.c  camera.c  fw_download.c  gpio.c  greybus-core.c  greybus_camera.h  greybus_cport.c  greybus_internal.h  greybus_lights.h  greybus_messages.c  greybus_pwm.h  greybus_spi.h  interfaces.c  lights.c  log.c  pwm-protocol.c  spi.c  svc.c  uart.c
subsys/greybus/platform/: certificate.c  service.c
subsys/greybus/transport/: apbridge.c  i2c.c  tcpip.c
tests/greybus/integration/apbridge/: CMakeLists.txt  prj.conf  testcase.yaml
tests/greybus/integration/camera/: CMakeLists.txt  Kconfig  prj.conf  testcase.yaml
tests/greybus/integration/camera/boards/: native_sim_native.overlay
tests/greybus/integration/camera/dts/bindings/: zephyr,fake-camera.yaml
tests/greybus/integration/camera/src/: fake_camera.c  main.c
tests/greybus/integration/led/: CMakeLists.txt  prj.conf  testcase.yaml
(+28 files in other folders)
